feat: swagger for handler
